Bug 165277 - Last gpx directory isn't remebered
Summary: Last gpx directory isn't remebered
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Geolocation-Correlator (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-06-29 09:51 UTC by Julian Klein
Modified: 2017-08-18 19:34 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.0.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Julian Klein 2008-06-29 09:51:20 UTC
Version:            (using KDE 3.5.8)

If you go into the geotagging plugin in digikam and open the dialog to select a gpx file it always searches in ~/Documents. It would be very useful, if the last selected directory would be remembered for the next time.
Comment 1 Michael G. Hansen 2009-12-04 18:50:22 UTC
SVN commit 1058570 by mghansen:

Remember last gpx directory when the GPSSync dialog is closed.

BUG: 165277



 M  +3 -1      NEWS  
 M  +2 -0      gpssync/gpssyncdialog.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1058570