Remember last gpx directory when the GPSSync dialog is closed.

BUG: 165277


svn path=/trunk/extragear/graphics/kipi-plugins/; revision=1058570